доработал формы входа

--- a/vite-project/index.html
+++ b/vite-project/index.html
@@ -15,8 +15,8 @@
       <h3 id="log" class="dark">ВХОД</h3>
       <h3 id="reg" class="light">РЕГИСТРАЦИЯ</h3>
     </div>
-    <form>
-    </form>
+    <div id="forForm">
+    </div>
   </div>
 </body>
 
