--- a/vite-express-project/index.html
+++ b/vite-express-project/index.html
@@ -3,10 +3,8 @@
 
 <head>
   <meta charset="UTF-8" />
+  <title>Вход и Регистрация</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <script type="module" src="/src/main.tsx"></script>
-
-  <link rel="stylesheet" type="text/css" href="src\index.css">
 </head>
 
 <body>
@@ -18,6 +16,8 @@
     <div id="forForm">
     </div>
   </div>
+  <script type="module" src="/src/client/main.tsx"></script>
+
 </body>
 
 </html>
