--- a/vite-express-project/index.html
+++ b/vite-express-project/index.html
@@ -3,21 +3,13 @@
 
 <head>
   <meta charset="UTF-8" />
-  <title>Вход и Регистрация</title>
+  <title>NotX</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script type="module" src="/src/client/main.tsx"></script>
 </head>
 
 <body>
-  <div>
-    <div>
-      <h3 id="log" class="dark">ВХОД</h3>
-      <h3 id="reg" class="light">РЕГИСТРАЦИЯ</h3>
-    </div>
-    <div id="forForm">
-    </div>
-  </div>
-  <script type="module" src="/src/client/main.tsx"></script>
-
+  <div></div>
 </body>
 
 </html>
