--- a/vite-express-project/index.html
+++ b/vite-express-project/index.html
@@ -9,7 +9,8 @@
 </head>
 
 <body>
-  <div></div>
+  <header><img src="/images/NotX_logo.png"></header>
+  <div id="container"></div>
 </body>
 
 </html>
