--- a/vite-express-project/index.html
+++ b/vite-express-project/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <header><img src="/images/NotX_logo.png"></header>
+  <!-- <header><img src="/images/NotX_logo.png"></header> -->
   <div></div>
 </body>
 
