--- a/vite-express-project/index.html
+++ b/vite-express-project/index.html
@@ -7,7 +7,7 @@
     <script type="module" src="/src/client/main.tsx"></script>
   </head>
 
-  <body>
+  <body class="bg-blue-50 w-screen h-screen flex justify-center align-middle">
     <div></div>
   </body>
 </html>
