--- a/vite-express-project/index.html
+++ b/vite-express-project/index.html
@@ -8,6 +8,6 @@
   </head>
 
   <body class="bg-blue-50 w-screen h-screen flex justify-center align-middle">
-    <div></div>
+    <div class="mt-14"></div>
   </body>
 </html>
