--- a/vite-express-project/index.html
+++ b/vite-express-project/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>NotX</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script type="module" src="/src/client/main.tsx"></script>
+    <script type="module" src="./src/main.tsx"></script>
   </head>
 
   <body class="bg-blue-50 w-full h-full flex justify-center align-middle">
