--- a/vite-express-project/index.html
+++ b/vite-express-project/index.html
@@ -7,7 +7,7 @@
     <script type="module" src="./src/main.tsx"></script>
   </head>
 
-  <body class="bg-blue-50 w-full h-full flex justify-center align-middle">
-    <div class="mt-14 bg-[#e2edfc] max-w-5xl w-[900px]"></div>
+  <body class="bg-blue-50 w-screen h-[calc(100vh-62px)] flex justify-center align-middle">
+    <div></div>
   </body>
 </html>
